force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Transaction Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>