force-app/main/default/objects/Transaction__c/fields/Purchased_Property__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchased Property</label>
    <referenceTo>Purchased_Property__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>