force-app/main/default/objects/Transaction__c/recordTypes/Expense.recordType-meta.xml
<RecordType>
    <fullName>Expense</fullName>
    <active>true</active>
    <label>Expense</label>
</RecordType>