force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchased_Property__c</columns>
    <columns>Contact__c</columns>
    <columns>Staff__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>