force-app/main/default/objects/Transaction__c/listViews/Property_Commissions.listView-meta.xml
<ListView>
    <fullName>Property_Commissions</fullName>
    <columns>NAME</columns>
    <columns>Purchased_Property__c</columns>
    <columns>Staff__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Commission</value>
    </filters>
    <filters>
        <field>Purchased_Property__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Property Commissions</label>
</ListView>