force-app/main/default/objects/Transaction__c/listViews/Staff_s_Commission.listView-meta.xml
<ListView>
    <fullName>Staff_s_Commission</fullName>
    <columns>NAME</columns>
    <columns>Purchased_Property__c</columns>
    <columns>Staff__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Staff__c</field>
        <operation>notEqual</operation>
        <value>Ramesh Tehlani</value>
    </filters>
    <label>Staff&apos;s Income</label>
</ListView>