force-app/main/default/objects/Transaction__c/listViews/Unpaid.listView-meta.xml
<ListView>
    <fullName>Unpaid</fullName>
    <columns>NAME</columns>
    <columns>Purchased_Property__c</columns>
    <columns>Staff__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Unpaid</value>
    </filters>
    <label>All Unpaid Commission</label>
</ListView>